objects/BRNSHRK__Brainshark_Coaching_Submission__c.object
<CustomObject>
    <fields>
        <fullName>BRNSHRK__AverageScore__c</fullName>
        <label>Average Score</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__DaysUntilFirstSubmission__c</fullName>
        <formula>DATEVALUE(BRNSHRK__Invitation__r.BRNSHRK__InvitationDate__c) - DATEVALUE(BRNSHRK__SubmissionDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Until First Submission</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Invitation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invitation</label>
        <referenceTo>BRNSHRK__Brainshark_Coaching_Invitation__c</referenceTo>
        <relationshipLabel>Brainshark Coaching Submissions</relationshipLabel>
        <relationshipName>Brainshark_Coaching_Submissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__MachineScore__c</fullName>
        <label>Machine Score</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__NumberOfPeersFeedbackDone__c</fullName>
        <label>Number Of Peers Feedback Done</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__SubmissionDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Submission Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__SubmissionID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SubmissionID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Version__c</fullName>
        <label>Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Brainshark Coaching Submission</label>
    <nameField>
        <displayFormat>BCS-{00000}</displayFormat>
        <label>Brainshark Coaching Submission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Brainshark Coaching Submissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>